<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLoginPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvJobstreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_street"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="@color/blue"
            android:layout_marginTop="50dp"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/user_name"
            />

        <EditText
            android:id="@+id/etEmailSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email_address_hint"
            />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/phone_number_hint"
            android:inputType="number"/>

        <EditText
            android:id="@+id/etPasswordSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/etRePasswordSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnSignupSignPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/sign_up"
            android:backgroundTint="@color/teal_700"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_signing_up_i_have_read_and_agreed_to_jobstreet_terms_of_use_and_privacy_policy"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginTop="35dp"
            android:paddingLeft="30sp"
            android:paddingRight="30sp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>