<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/linearLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login Page"
            android:textSize="30dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_baseline_login_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"
            />

        <TextView
            android:id="@+id/tvFillProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/imgLogin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/fill_in_your_profile_for_efficient_job_applications"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginText"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/blue"
            />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:backgroundTint="@color/blue"
            />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>